--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ musicbot/activitymsg.txt
 musicbot/activityvoice.txt
 audio_cache/youtube-I1ckDjDwyxw-Celldweller_-_Hemlock_Drone_Attack.webm
 *.m4a
+*.png
